k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
  namespace: shopping-demo
  labels:
    app: shopping-api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: shopping-api
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      containers:
        - name: shopping-api
          image: 486053612615.dkr.ecr.us-west-2.amazonaws.com/shopping-demo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "768Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
