k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-web
  namespace: shopping-demo
  labels:
    app: shopping-web
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: shopping-web
  template:
    metadata:
      labels:
        app: shopping-web
    spec:
      containers:
        - name: shopping-web
          image: 486053612615.dkr.ecr.us-west-2.amazonaws.com/shopping-demo-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "768Mi"
