k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-api
  namespace: shopping-demo
  labels:
    app: shopping-api
spec:
  type: ClusterIP
  selector:
    app: shopping-api
  ports:
    - name: http
      port: 80
      targetPort: http
